BoaUAT/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_other_frustrations_pain_points__c</fullName>
        <label>Any other frustrations / pain points</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOA_Offered_Cost__c</fullName>
        <label>BOA Offered Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Spend__c</fullName>
        <label>Current Spend</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Do_you_make_hoses_yourself__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you make hoses yourself</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Down_Time_in_Hrs_per_month__c</fullName>
        <label>Down Time in Hrs (per month)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_Cost__c</fullName>
        <label>Existing Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Existing_provider__c</fullName>
        <label>Existing provider</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hobbies_Passions__c</fullName>
        <label>Hobbies / Passions</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hourly_downtime_cost_for_your_company__c</fullName>
        <label>Hourly downtime cost for your company</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hydraulic_Oil_Usage_Ltrs__c</fullName>
        <label>Hydraulic Oil Usage (ltrs.)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Spend__c</fullName>
        <label>Monthly Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_Hoses__c</fullName>
        <label>No of Hoses</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Hydraulic_Equipment__c</fullName>
        <label>No of Hydraulic Equipment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_trucks_loads_you_are_getting_out__c</fullName>
        <label>No of trucks / loads you are getting out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_trucks_loads_you_need_to_get_out__c</fullName>
        <label>No of trucks / loads you need to get out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Times_Lead_Visited__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Times Lead Visited</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Cost__c</fullName>
        <inlineHelpText>If &apos;Other&apos; is selected, please specify your cost here.</inlineHelpText>
        <label>Other Cost</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Contact_Name__c</fullName>
        <inlineHelpText>Please enter text here if you have selected Referral as the lead source</inlineHelpText>
        <label>Referral Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auckland</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Bay of Plenty</fullName>
                </value>
                <value>
                    <fullName>Canterbury</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>East Coast</fullName>
                </value>
                <value>
                    <fullName>Gisborne</fullName>
                </value>
                <value>
                    <fullName>Hawkes Bay</fullName>
                </value>
                <value>
                    <fullName>Manawatu</fullName>
                </value>
                <value>
                    <fullName>Northland</fullName>
                </value>
                <value>
                    <fullName>North Shore</fullName>
                </value>
                <value>
                    <fullName>Otago</fullName>
                </value>
                <value>
                    <fullName>Pacific Islands</fullName>
                </value>
                <value>
                    <fullName>Southland</fullName>
                </value>
                <value>
                    <fullName>Taranaki</fullName>
                </value>
                <value>
                    <fullName>Tasman/Marlborough/West Coast</fullName>
                </value>
                <value>
                    <fullName>Waikato</fullName>
                </value>
                <value>
                    <fullName>Wellington</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Demo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requested Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_time__c</fullName>
        <label>Response time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>defines role of the individual.</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contact_Role_list</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size_of_the_prize__c</fullName>
        <label>Size of the prize</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4+ Crew or &gt; 60k / year BOA Revenue Potential</fullName>
                </value>
                <value>
                    <fullName>2+ Crew or &gt; 30k / year BOA Revenue Potential</fullName>
                </value>
                <value>
                    <fullName>1 Crew or &gt; 12k / year BOA Revenue Potential</fullName>
                </value>
                <value>
                    <fullName>Fail Fast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Saving__c</fullName>
        <formula>Existing_Cost__c - BOA_Offered_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Saving</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Viewed_Contact_Details__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Viewed Contact Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>What_are_your_top_3_costs__c</fullName>
        <label>What are your top 3 costs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fuel / Oil</fullName>
                </value>
                <value>
                    <fullName>People</fullName>
                </value>
                <value>
                    <fullName>Hydraulics</fullName>
                </value>
                <value>
                    <fullName>Depreciation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_gets_in_way_of_hitting_your_numbers__c</fullName>
        <label>What gets in way of hitting your numbers</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isLead__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isLead</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Civil_Industry_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.INDUSTRY</field>
            <operation>equals</operation>
            <value>Civil</value>
        </filters>
        <label>Civil Industry Leads</label>
    </listViews>
    <listViews>
        <fullName>Forestry_Industry_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.INDUSTRY</field>
            <operation>equals</operation>
            <value>Forestry</value>
        </filters>
        <label>Forestry Industry Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Hot_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.RATING</field>
            <operation>equals</operation>
            <value>Hot</value>
        </filters>
        <label>My Hot Leads</label>
    </listViews>
    <listViews>
        <fullName>Sales_team_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Internal Sales team</label>
        <queue>Internal_Sales_team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Capture_text_For_Other</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
INCLUDES(What_are_your_top_3_costs__c,&quot;Other&quot;), 
ISBLANK( Other_Cost__c) 
)</errorConditionFormula>
        <errorMessage>Please enter text in &apos;Other Cost&apos; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Capture_text_for_referral</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(LeadSource ,&quot;Referral&quot;), 
ISBLANK( Referral_Contact_Name__c ) 
)</errorConditionFormula>
        <errorMessage>Please enter text in &apos;Referral Contact Name&apos; field</errorMessage>
    </validationRules>
</CustomObject>